--- a/Part2/Good.html
+++ b/Part2/Good.html
@@ -4,6 +4,18 @@
 <link rel="stylesheet" type="text/css" href="Good.css" />
 </head>
 <body>
-
+<div class="sidebar">
+<img src="Kim.jpg" height="300" width="200">
+</div>
+<div class="header">
+<h3 class="header1">My name is</h3>
+<h1 class="header2">Ji Cheng</h1>
+<h3 class="header3">And I am a</h3>
+<h1 class="header4">Software Developer</h1>
+</div>
+<div class="content">
+</div>
+<div class="footer">
+</div>
 </body>
 </html>
