--- a/Part2/Bad.html
+++ b/Part2/Bad.html
@@ -1,9 +1,85 @@
 <html>
 <head>
-<title>Ji Cheng's Personal Page</title>
-<link rel="stylesheet" type="text/css" href="Bad.css" />
+    <title>Ji Cheng's Personal Page</title>
+    <link rel="stylesheet" type="text/css" href="Bad.css" />
 </head>
 <body>
-
+<div class="sidebar">
+    <br>
+    <img src="Image/Ji.jpg" height="189" width="126">
+    <br>
+    <h4 align="left">Important of me :</h4>
+    <p class="des">
+        1. &nbsp;I will be graduated By 2016 !
+    </p>
+    <p class="des">
+        2. &nbsp;My family name is Cheng!
+    </p>
+    <p class="des">
+        3. &nbsp;My email address is Jcheng1@ulberta.ca
+    </p>
+    <p class="des">
+        4. &nbsp;<a href="https://github.com/jerrycheng9" target="_blank">This</a> is my github homepage
+    </p>
+    <br>
+    <img src="Image/Cutecat.gif">
+</div>
+<div class="header">
+    <h3 class="header1">My name is</h3>
+    <h1 class="header2">Ji Cheng</h1>
+    <h3 class="header3">And I am a</h3>
+    <h1 class="header4">Software Developer</h1>
+    <p>
+        I am a 4th year student major in Computing Science.I'm from China and I can speak English and Mandarin Chinese Fluently.
+        I am graduating by 2016. My favorite sport is soccer and I love to play computer games too!
+    </p>
+</div>
+<div class="content">
+    <p class="title">Course Work I have taken:</p>
+    <table>
+        <tr>
+            <td>CMPUT 174 &nbsp;Introduction to Foundations of Computation I</td>
+            <td>CMPUT 175 &nbsp;Introduction to Foundations of Computation II</td>
+        </tr>
+        <tr>
+            <td>CMPUT 201 &nbsp;Practical Programming Methodology</td>
+            <td>CMPUT 204 &nbsp;Algorithm I</td>
+        </tr>
+        <tr>
+            <td>CMPUT 206 &nbsp;Introduction to Digital Image Processing</td>
+            <td>CMPUT 229 &nbsp;Computer Organization and Architecture I</td>
+        </tr>
+        <tr>
+            <td>CMPUT 272 &nbsp;Formal Systems and Logic in Computer Science</td>
+            <td>CMPUT 291 &nbsp;Introduction to File and Database Management</td>
+        </tr>
+        <tr>
+            <td>CMPUT 301 &nbsp;Introduction to Software Engineering</td>
+            <td>CMPUT 307 &nbsp;3D Graphics and Animation with 3Ds Max</td>
+        </tr>
+        <tr>
+            <td>CMPUT 340 &nbsp;Introduction to Numerical Methods</td>
+            <td>CMPUT 350 &nbsp;Advanced Game Programming</td>
+        </tr>
+        <tr>
+            <td>CMPUT 391 &nbsp;Database Management Systems</td>
+            <td>CMPUT 401 &nbsp;Software Process and Product Management</td>
+        </tr>
+        <tr>
+            <td>CMPUT 404 &nbsp;Web-Based Information Systems</td>
+            <td>CMPUT 414 &nbsp;Introduction to Multimedia Technology</td>
+        </tr>
+    </table>
+    <p class="title">What I can offer:</p>
+    <p>
+        I had experience in <b>Web</b> development, <b>Android App </b>development and <b>Database</b> development.
+    </p>
+    <p>
+        Programming Languages: C/C++, Java, Python, MySQL, HTML, PHP, C#, CSS, JavaScripts, JQuery, Ajax.
+    </p>
+</div>
+<div class="footer">
+    <img src="Image/Thankyou.jpg" width="110" height="60" >
+</div>
 </body>
 </html>
