--- a/Part2/Good.html
+++ b/Part2/Good.html
@@ -6,7 +6,7 @@
     <body>
         <div class="sidebar">
             <br>
-            <img src="Ji.jpg" height="189" width="126">
+            <img src="Image/Ji.jpg" height="189" width="126">
             <br>
             <h4 align="left">Important of me :</h4>
             <p class="des">
@@ -22,7 +22,7 @@
                 4. &nbsp;<a href="https://github.com/jerrycheng9" target="_blank">This</a> is my github homepage
             </p>
             <br>
-            <img src="Cutecat.gif">
+            <img src="Image/Cutecat.gif">
         </div>
         <div class="header">
             <h3 class="header1">My name is</h3>
@@ -79,7 +79,7 @@
             </p>
         </div>
         <div class="footer">
-            <img src="Thankyou.jpg" width="110" height="60" >
+            <img src="Image/Thankyou.jpg" width="110" height="60" >
         </div>
     </body>
 </html>
